[gd_scene load_steps=6 format=3 uid="uid://dkathnc7y85yw"]

[ext_resource type="Texture2D" uid="uid://b4t421rn1stho" path="res://arte/panel_De_menu2.png" id="1_17853"]
[ext_resource type="Script" path="res://Scritps/Opciones_Audio.gd" id="1_baamt"]
[ext_resource type="Script" path="res://Scritps/Atras_audio.gd" id="1_fa4gp"]
[ext_resource type="PackedScene" uid="uid://7dbke3wi4ig5" path="res://Escenarios/parallax_background.tscn" id="2_lofum"]
[ext_resource type="FontFile" uid="uid://dlw0p5hp3ewsu" path="res://fuentes/long_today/Long Today.otf" id="3_ku3wb"]

[node name="Audio" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_baamt")

[node name="PanelDeMenu3" type="Sprite2D" parent="."]
position = Vector2(456, 507)
scale = Vector2(0.2565, 0.48)
texture = ExtResource("1_17853")

[node name="PanelDeMenu2" type="Sprite2D" parent="."]
position = Vector2(491, 270)
scale = Vector2(1.25425, 2.11)
texture = ExtResource("1_17853")

[node name="Atras" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -70.0
offset_right = 35.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Atras"
flat = true
script = ExtResource("1_fa4gp")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.0
offset_top = -68.5
offset_right = 173.0
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 40

[node name="Volumen_Principal" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_ku3wb")
theme_override_font_sizes/font_size = 20
text = "Volumen Principal"
horizontal_alignment = 1

[node name="Volumen_Musica" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_ku3wb")
theme_override_font_sizes/font_size = 20
text = "Volumen de la Musica"
horizontal_alignment = 1

[node name="Sonido_FX" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_ku3wb")
theme_override_font_sizes/font_size = 20
text = "Sonido FX"
horizontal_alignment = 1

[node name="Slider" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 40

[node name="HSlider_Volumen_Principal" type="HSlider" parent="HBoxContainer/Slider"]
layout_mode = 2

[node name="HSlider2_Volumen_Musica" type="HSlider" parent="HBoxContainer/Slider"]
layout_mode = 2

[node name="HSlider3_Sonido_FX" type="HSlider" parent="HBoxContainer/Slider"]
layout_mode = 2

[node name="ParallaxBackground" parent="." instance=ExtResource("2_lofum")]

[connection signal="pressed" from="Atras" to="Atras" method="_on_pressed"]
[connection signal="value_changed" from="HBoxContainer/Slider/HSlider_Volumen_Principal" to="." method="_on_h_slider_volumen_principal_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Slider/HSlider2_Volumen_Musica" to="." method="_on_h_slider_2_volumen_musica_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Slider/HSlider3_Sonido_FX" to="." method="_on_h_slider_3_sonido_fx_value_changed"]
